@@ -778,12 +778,54 @@ int _Locale_strwcmp(struct _Locale_collate*l,
   } else
     return ret;
 }
+size_t _Locale_strxfrm(struct _Locale_collate *lcollate,
+                       char *dest, size_t dest_n,
+                       const char *src, size_t src_n )
+{
+  if (src_n == 0)
+  {
+    if (dest != NULL) dest[0] = 0;
+    return 0;
+  }
+  const char *real_src;
+  char *buf = NULL;
+  if (src[src_n] != 0) {
+    buf = malloc(src_n + 1);
+    strncpy(buf, src, src_n);
+    buf[src_n] = 0;
+    real_src = buf;
+  }
+  else
+    real_src = src;
+  size_t result = strxfrm(dest, real_src, dest_n);
+  if (buf != NULL) free(buf);
+  return result;
+}
 
-size_t _Locale_strxfrm(struct _Locale_collate* lcollate,
-           char* dest, size_t destN, const char* src, size_t srcN)
-{ return strxfrm(dest, src, destN); }
+# ifndef _STLP_NO_WCHAR_T
 
-size_t _Locale_strwxfrm(struct _Locale_collate* lcollate,
-      wchar_t* dest, size_t destN,
-      const wchar_t* src, size_t srcN)
-{ return wcsxfrm(dest, src, destN); }
+size_t _Locale_strwxfrm(struct _Locale_collate *lcollate,
+                        wchar_t *dest, size_t dest_n,
+                        const wchar_t *src, size_t src_n)
+{
+  if (src_n == 0)
+  {
+    if (dest != NULL) dest[0] = 0;
+    return 0;
+  }
+  const wchar_t *real_src;
+  wchar_t *buf = NULL;
+  if (src[src_n] != 0) {
+    buf = malloc((src_n + 1) * sizeof(wchar_t));
+    wcsncpy(buf, src, src_n);
+    buf[src_n] = 0;
+    real_src = buf;
+  }
+  else
+    real_src = src;
+  size_t result = wcsxfrm(dest, real_src, dest_n, (__c_locale)__loc);
+  if (buf != NULL) free(buf);
+  return result;
+}
+
+#endif
